--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ body {
     font-family: "Open Sans", sans-serif;
     display: grid;
     place-content: center;
+    position: relative;
 }
 
 .landing-page {
@@ -113,7 +114,6 @@ i:focus {
 
     .landing-page {
         max-width: 1440px;
-        /* padding: initial; */
         display: grid;
         grid-template-columns: 1fr auto;
         padding-top: 4.5rem;
@@ -153,9 +153,9 @@ i:focus {
 
     .icons {
         position: absolute;
-        bottom: 100px;
-        right: 300px;
-        display: flex;
-        justify-content: right;
+        bottom: 50px;
+        right: 400px;
+        /* display: flex; */
+        /* justify-content: right; */
     }
 }
