--- a/css/style.css
+++ b/css/style.css
@@ -154,8 +154,8 @@ i:focus {
     .icons {
         position: absolute;
         bottom: 50px;
-        right: 400px;
-        /* display: flex; */
-        /* justify-content: right; */
+        right: 200px;
+        display: flex;
+        justify-content: right;
     }
 }
