--- a/css/style.css
+++ b/css/style.css
@@ -19,29 +19,31 @@ body {
     font-family: "Open Sans", sans-serif;
     display: grid;
     place-content: center;
-    position: relative;
+    padding: 1rem 0;
 }
 
-.landing-page {
+header,
+main,
+footer {
     max-width: 375px;
-    padding: 2.3rem;
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
 }
 
 header {
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
+    text-align: left;
 }
 
 .header-logo {
     max-width: 125px;
-    margin-bottom: 3.2rem;
+    margin-bottom: 2rem;
+
 }
 
 .illustration-mockups {
     width: 100%;
-}
-
-main {
-    text-align: center;
 }
 
 h1 {
@@ -110,40 +112,41 @@ i:focus {
     body {
         background-image: url("../images/bg-desktop.svg");
         background-size: contain;
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
     }
 
-    .landing-page {
-        max-width: 1440px;
-        display: grid;
-        grid-template-columns: 1fr auto;
-        padding-top: 4.5rem;
+    header,
+    main,
+    footer {
+        max-width: 100%;
+    }
+
+    header {
+        grid-column: 1/4;
     }
 
     .header-logo {
-        max-width: 260px;
+        max-width: 280px;
     }
 
     main {
-        justify-self: start;
-        align-self: center;
-        padding-left: 3rem;
+        grid-column: 4/-1;
+        place-self: center;
+        text-align: left;
     }
 
     h1 {
-        max-width: 590px;
-        font-size: 2.9rem;
+        max-width: 450px;
+        font-size: 2.3rem;
         line-height: 1.2;
-        text-align: left;
     }
 
     p {
         max-width: 590px;
         text-align: left;
         font-size: 1.1rem;
-    }
-
-    .btn {
-        display: flex;
+        margin-left: 0;
     }
 
     .btn-register {
@@ -151,11 +154,8 @@ i:focus {
         font-size: 1rem;
     }
 
-    .icons {
-        position: absolute;
-        bottom: 50px;
-        right: 200px;
-        display: flex;
-        justify-content: right;
+    footer {
+        grid-column: -2/-1;
     }
+
 }
